k3s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mittag-ingress
  namespace: dev-mittag
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
  - host: dev.mittag.tino.sh
    http:
      paths:
      - backend:
          serviceName: mittag-app-service
          servicePort: 80

  tls:
  - hosts:
    - dev.mittag.tino.sh
    secretName: dev-mittag-tino-sh-tls
